clean up some stuff, add readme

--- a/index.html
+++ b/index.html
@@ -63,6 +63,11 @@
 		<div class='form-field'><input type='checkbox' id='trails'><label for='trails'>Trails</label></div>
 	</div>
 
+	<div class='block block--bottom'>
+		<a href='http://github.com/kevinzweerink/ntype' target='_blank' class='ext_link'>About</a> •
+		<a href='http://kevinzweerink.com' target='_blank' class='ext_link'>Kevin Zweerink</a>
+	</div>
+
 </div>
 
 <div id='controls-toggle'>
