add url parsing and bit.ly links

--- a/index.html
+++ b/index.html
@@ -70,14 +70,15 @@
 
 </div>
 
+<a id='share-message' href='#'>Share Message</a>
+
 <div id='controls-toggle'>
 	<img src='assets/controls-icon.svg'>
 </div>
 <script type='text/javascript' src='js/three.min.js'></script>
-<script type='text/javascript' src='js/three.trackball.js'></script>
 <script type='text/javascript' src='js/type.js'></script>
+<script type="text/javascript" src='js/controls.js'></script>
 <script type='text/javascript' src='js/main.js'></script>
 <script type='text/javascript' src='js/share.js'></script>
-<script type="text/javascript" src='js/controls.js'></script>
 </body>
 </html>
