--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 	<title>NType</title>
 	<link rel="stylesheet" href="reset.css">
 	<link href='style.css' rel='stylesheet'>
+	<link rel="icon" type="image/png" href="favicon.png">
 	<meta charset='UTF-8'>
 </head>
 <body>
