--- a/index.html
+++ b/index.html
@@ -79,6 +79,7 @@
 <script type='text/javascript' src='js/three.min.js'></script>
 <script type='text/javascript' src='js/type.js'></script>
 <script type="text/javascript" src='js/controls.js'></script>
+<script type='text/javascript' src='js/ntype.js'></script>
 <script type='text/javascript' src='js/main.js'></script>
 <script type='text/javascript' src='js/share.js'></script>
 
