--- a/index.html
+++ b/index.html
@@ -76,6 +76,44 @@
 <div id='controls-toggle'>
 	<img src='assets/controls-icon.svg'>
 </div>
+
+<div id='info-toggle'>
+	<img src='assets/info-icon.svg'>
+</div>
+
+<div id='info-overlay'>
+	<div class='info-section__info'>
+		<h2 class='info-heading'>NType</h2>
+		<p class='info-body'>NType is a 4D communication tool.</p>
+	</div>
+
+	<hr class='full-width-rule'>
+	<div class='info-section__controls'>
+		<h3 class='controls-list__heading'>Key Controls</h3>
+		<ul class='controls-list'>
+			<li class='controls-list__list-item'>
+				<span class='controls-list__item-heading'>Backspace</span>
+				Removes the last character on screen
+			</li>
+
+			<li class='controls-list__list-item'>
+				<span class='controls-list__item-heading'>A&ndash;Z</span>
+				Types a letter in 4D extrusion
+			</li>
+
+			<li class='controls-list__list-item'>
+				<span class='controls-list__item-heading'>Space</span>
+				Pause/play the animation
+			</li>
+
+			<li class='controls-list__list-item'>
+				<span class='controls-list__item-heading'>Scroll While Paused</span>
+				Scrub through the animation
+			</li>
+		</ul>
+	</div>
+</div>
+
 <script type='text/javascript' src='js/three.min.js'></script>
 <script type='text/javascript' src='js/type.js'></script>
 <script type="text/javascript" src='js/controls.js'></script>
