update otf info--no safari support

--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
 			</li>
 			<li class='actions-list__list-item'>
 				<span class='actions-list__item-heading'>Download OTF</span>
-				Download an OTF of (maybe) the current rotation. This part doesn't work great yet.
+				Download an OTF of (maybe) the current rotation. This part only works in chrome and doesn't work great yet.
 			</li>
 	</div>
 </div>
