toggle info panel

--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
 <div class='actions'>
 
 	<a id='share-message' href='#'>Share Message</a>
-	<a id='download' href='#'><img src='assets/dload-icon.svg'>Download Rotation As OTF</a>
+	<a id='download' href='#'>Download Rotation As OTF</a>
 
 </div>
 
@@ -87,6 +87,7 @@
 </div>
 
 <div id='info-overlay'>
+	<a href='#' id='info-overlay__close'>&times;</a>
 	<div class='info-section__info'>
 		<h2 class='info-heading'>NType</h2>
 		<p class='info-body'>NType is a 4D communication tool.</p>
