--- a/index.html
+++ b/index.html
@@ -6,6 +6,11 @@
 	<link href='style.css' rel='stylesheet'>
 	<link rel="icon" type="image/png" href="favicon.png">
 	<meta charset='UTF-8'>
+	<meta name="twitter:card" content="photo" />
+	<meta name="twitter:site" content="@kevinzweerink" />
+	<meta name="twitter:title" content="NType" />
+	<meta name="twitter:image" content="http://ntype.blue/assets/ntype.jpg" />
+	<meta name="twitter:url" content="http://ntype.blue" />
 </head>
 <body>
 
